--- a/day 7/flower assignment/index.html
+++ b/day 7/flower assignment/index.html
@@ -14,6 +14,6 @@
 
   <body>
     <script src="sketch.js"></script>
-    <script src="car.js"></script>
+    <script src="flower.js"></script>
   </body>
 </html>
